Fix temporarily layout bugs with price div.

--- a/assets/css/cc/layout.less
+++ b/assets/css/cc/layout.less
@@ -180,6 +180,9 @@
   margin-bottom: 10px;
 }
 
+.main_pricing_place {
+  min-width:  880px;
+}
 .cc-pricing-bar {
   min-height: 90px;
 
